test/e2e/chainsaw/flagd-with-gateway-api/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: flagd-with-gateway-api
spec:
  steps:
    - name: step-00
      try:
        - apply:
            file: ../assets/gateway-api.yaml
        - script:
            content: kubectl wait --for condition=Established crd/httproutes.gateway.networking.k8s.io --timeout=60s
    - name: step-01
      try:
        - apply:
            file: 00-install.yaml
        - assert:
            file: 00-assert.yaml
